--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- migration:generate -d src/config/typeorm.config.ts",
-    "migration:run": "npm run typeorm -- migration:run -d src/config/typeorm.config.ts"
+    "migration:run": "npm run typeorm -- migration:run -d src/config/typeorm.config.ts",
+    "seed": "ts-node -r tsconfig-paths/register scripts/seed-database.ts",
+    "db:reset": "echo 'Exécutez le script SQL: scripts/reset-database.sql dans votre client PostgreSQL'"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
